[package]
name = "flhde_flconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.0"
regex = "1.6.0"
chrono = "0.4.22"
nwg = {version = "1.0.13", package = "native-windows-gui"}
native-windows-derive = "1.0.3"
directories = "4.0"