[package]
name = "flhde_flconvert"
version = "0.1.0"
authors = ["dmutlu"]
edition = "2021"
rust-version = "1.63"
description = "A Win32 program to convert or convert + fix saves for the game Freelancer (2003)."
keywords = ["Freelancer", "HDE", "save"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.0"
regex = "1.6.0"
chrono = "0.4.22"
nwg = {version = "1.0.13", package = "native-windows-gui", features = ["menu"]}
native-windows-derive = "1.0.3"
directories = "4.0"