[package]
name = "fl_convert"
version = "1.0.1"
authors = ["dmutlu"]
edition = "2021"
rust-version = "1.63"
description = "A Win32 program to convert or convert + fix saves for the game Freelancer (2003)."
readme = "README.md"
repository = "https://github.com/dmutlu/fl_convert"
license = "MIT"
keywords = ["Freelancer", "HDE", "save"]
build = "build.rs"

[dependencies]
bstr = "1.0.0"
regex = "1.6.0"
chrono = "0.4.22"
nwg = {version = "1.0.13", package = "native-windows-gui", features = ["menu"]}
native-windows-derive = "1.0.3"
directories = "4.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Freelancer Save Convert"
OriginalFilename = "fl_convert.exe"
ProductName = "FL_Convert"